# Journey_Detour

./: .gitignore  CMakeLists.txt  Journey_Detour.sln  Journey_Detour.vcxproj  Journey_Detour.vcxproj.filters  LICENSE  LuaHook.sln  README.md  UpgradeLog.htm  console.cpp  console.h  game.cpp  game.h  hookutils.cpp  hookutils.h  journey_detour_v3.sln  lua.cpp  lua.h  main.cpp  menu.cpp  menu.h  offsets.cpp  offsets.h  render.cpp  render.h  sharedlibrary.h  utils.cpp  utils.h  vardisplay.cpp  vardisplay.h  vcpkg.json
LuaHook/: Flower_Detour.cpp  Journey_Detour.cpp  LuaHook.cpp  LuaHook.vcxproj  LuaHook.vcxproj.filters  console.cpp  console.h  custommenu.cpp  custommenu.h  game.cpp  game.h  guiconsole.cpp  guiconsole.h  hooks.h  hookutils.cpp  hookutils.h  lua.cpp  lua.h  luahooks.cpp  luahooks.h  main.cpp  menu.cpp  menu.h  render.cpp  render.h  sharedlibrary.h  spdlog.h  stdafx.h  utils.cpp  utils.h
LuaHook/x64/Debug/: Journey_Detour.dll.recipe  Journey_Detour.ilk  LuaHook.dll.recipe  LuaHook.ilk  vc143.idb
LuaHook/x64/Debug/Journey_Detour.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Journey_Detour.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/spdlog/cfg/: argv.h  env.h  helpers-inl.h  helpers.h
include/spdlog/fmt/: fmt.h  ostr.h
journey_detour_v3/: dllmain.cpp  game.cpp  game.h  hooks.cpp  hooks.h  includes.h  journey_detour_v3.vcxproj  journey_detour_v3.vcxproj.filters  lua.cpp  lua.h  memory.cpp  menu.cpp  menu.h  pch.h  render.cpp  render.h
journey_detour_v3/igig/: igig.cpp  igig.h  kiero.cpp  kiero.h
(+9 files in other folders)
